# Localization_assignment_2

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/GeographicLib/lib/: libGeographicLib.so.23  libGeographicLib.so.23.0.0
install/GeographicLib/lib/cmake/GeographicLib/: geographiclib-targets-release.cmake
install/GeographicLib/share/GeographicLib/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/GeographicLib/share/doc/GeographicLib/html/: utilities.html
install/LibKML/lib/: libkmlbase.so.1.3.1  libkmlconvenience.so.1.3.1  libkmldom.so.1.3.1  libkmlengine.so.1.3.1
install/LibKML/lib/pkgconfig/: libkml.pc
install/LibKML/share/LibKML/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/localization/share/ament_index/resource_index/package_run_dependencies/: localization
install/localization/share/localization/: package.sh  package.xml
install/parser/lib/parser/: local_cartesian  parser_geo
install/parser/share/ament_index/resource_index/parent_prefix_path/: parser
install/parser/share/parser/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/parser/share/parser/cmake/: parserConfig.cmake
install/pugixml/lib/cmake/pugixml/: pugixml-config-version.cmake
install/pugixml/lib/pkgconfig/: pugixml.pc
install/pugixml/share/pugixml/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/libkml/: Makefile  Makefile.in  aclocal.m4  config.h  config.status  configure  libtool
src/libkml/autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
src/libkml/examples/: Makefile  Makefile.in
src/libkml/examples/domviewer/: Makefile  Makefile.in
src/libkml/examples/engine/: Makefile  Makefile.in
src/libkml/examples/gpx/: Makefile  Makefile.in
src/libkml/examples/gx/: Makefile  Makefile.in
src/libkml/examples/hellonet/: Makefile  Makefile.in
src/libkml/examples/helloworld/: Makefile  Makefile.in
src/libkml/examples/java/: Makefile  Makefile.in
src/libkml/examples/kml/: Makefile  Makefile.in
src/libkml/examples/python/: Makefile  Makefile.in
src/libkml/examples/regionator/: Makefile  Makefile.in
src/libkml/examples/wxregionator/: Makefile  Makefile.in
src/libkml/examples/wxviewer/: Makefile  Makefile.in
src/libkml/examples/xsd/: Makefile  Makefile.in
src/libkml/msvc/: Makefile  Makefile.in
src/libkml/msvc/examples/: Makefile  Makefile.in
src/libkml/msvc/tests/: Makefile  Makefile.in
src/libkml/src/: Makefile  Makefile.in
src/libkml/src/kml/: Makefile  Makefile.in
src/libkml/src/kml/base/: Makefile  Makefile.in
src/libkml/src/kml/base/.deps/: attributes.Tpo
src/libkml/src/kml/convenience/: Makefile  Makefile.in
src/libkml/src/kml/dom/: Makefile  Makefile.in
src/libkml/src/kml/engine/: Makefile  Makefile.in
src/libkml/src/kml/regionator/: Makefile  Makefile.in
src/libkml/src/kml/xsd/: Makefile  Makefile.in
src/libkml/src/swig/: Makefile  Makefile.in
src/libkml/src/swig/java/: Makefile  Makefile.in
src/libkml/src/swig/python/: Makefile  Makefile.in
src/libkml/testdata/: Makefile  Makefile.in
src/libkml/testdata/atom/: Makefile  Makefile.in
src/libkml/testdata/balloon/: Makefile  Makefile.in
src/libkml/testdata/csv/: Makefile  Makefile.in
src/libkml/testdata/deprecated/: Makefile  Makefile.in
src/libkml/testdata/gdata/: Makefile  Makefile.in
src/libkml/testdata/gmaps/: Makefile  Makefile.in
src/libkml/testdata/gpx/: Makefile  Makefile.in
src/libkml/testdata/gx/: Makefile  Makefile.in
src/libkml/testdata/kml/: Makefile  Makefile.in
src/libkml/testdata/kmz/: Makefile  Makefile.in
src/libkml/testdata/kmz/files/: Makefile  Makefile.in
src/libkml/testdata/kmz/kmzfiles/: Makefile  Makefile.in
src/libkml/testdata/kmz/rumsey/: Makefile  Makefile.in
src/libkml/testdata/kmz/rumsey/imagery/: Makefile  Makefile.in
src/libkml/testdata/kmz/rumsey/kml/: Makefile  Makefile.in
src/libkml/testdata/links/: Makefile  Makefile.in
src/libkml/testdata/style/: Makefile  Makefile.in
src/libkml/testdata/style/weather/: Makefile  Makefile.in
src/libkml/testdata/update/: Makefile  Makefile.in
src/libkml/testdata/xal/: Makefile  Makefile.in
src/libkml/testdata/xsd/: Makefile  Makefile.in
src/libkml/xcode/: Makefile  Makefile.in
src/libkml/xcode/LibKML/: Makefile  Makefile.in
src/parser/: CMakeLists.txt
src/parser/doc/: Localization_Assignment_Test_Route.kml  coordinates.txt
src/parser/src/: cartesian.cpp  example-Geodesic-small.cpp  local_cartesian.cpp
